--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,9 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title><%= VITE_APP_NAME %></title>
-    <meta name="description" content="<%= VITE_APP_DESC %>" />
-    <meta name="keywords" content="<%= VITE_APP_KEYWORDS %>" />
+    <title>txtkit</title>
+    <meta name="description" content="online text processing toolkit" />
+    <meta name="keywords" content="encode, decode, checksum" />
   </head>
   <body>
     <div id="root"></div>
